# Py-WebCruiser-v1.0

./: README.md  pyproject.toml  pyqtbrowser.py
src/py_webcruiser/: __init__.py  browser.py
tests/: test_browser.py
