[project]
name = "py-webcruiser"
version = "0.1.0"
description = "A lightweight PyQt6-based web browser learning project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6",
    "PyQt6-WebEngine",
]

[project.scripts]
py-webcruiser = "pyqtbrowser:main"

[tool.uv]
package = false
