[project]
name = "py-webcruiser"
version = "0.1.0"
description = "A lightweight PyQt6-based web browser learning project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6",
    "PyQt6-WebEngine",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
py-webcruiser = "py_webcruiser:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
